--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,11 +1,15 @@
+# python -m pip install --upgrade pip setuptools wheel
+
 # 웹 프레임워크
 fastapi==0.115.0    # 웹 프레임워크
 uvicorn==0.37.0     # FastAPI 서버
+jinja2==3.1.4       # HTML 템플릿 렌더링
 
 # 데이터 검증
-pydantic==2.9.2         # 데이터 검증
-email-validator==2.2.0  # 이메일 검증
-bcrypt==4.2.0           # 비밀번호 암복호화
+pydantic==2.9.2             # 데이터 검증
+email-validator==2.2.0      # 이메일 검증
+bcrypt==4.2.0               # 비밀번호 암복호화
+python-multipart==0.0.20    # Form 데이터 처리
 
 # ORM
 SQLAlchemy==2.0.34      # DB ORM
